--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,5 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
+.login{
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-image:url(https://images.unsplash.com/photo-1577495508048-b635879837f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80) ;
 }
