--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg{
+    background-image: url('https://img.freepik.com/free-vector/neon-quote-box-with-text-space_1017-31493.jpg?w=1800&t=st=1696358992~exp=1696359592~hmac=4505c3e6c1ffa1b5cdd9fff36365ce3eaf3bfeb36f86dcf690fc88221ddc88e8');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+} 
